--- a/updates/version.yaml
+++ b/updates/version.yaml
@@ -8,3 +8,5 @@
     - create_magiczne_resume_info_table.php
 1.0.3:
     - FIX: RainLab.Translate plugin shouldn't be required
+1.1.0:
+    - Added composer.json
